# gun_train

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/ai/: __init__.py  action_analyzer.py  gun_detector.py  model_trainer.py  pose_detector.py
backend/api/: __init__.py  main.py  schemas.py  websocket_manager.py
backend/camera/: __init__.py  camera_tester.py  demo.py  hikvision.py
backend/core/: __init__.py  performance_optimizer.py  realtime_analyzer.py  statistics.py  training_manager.py  tts_engine.py  video_processor.py
backend/db/: __init__.py  database.py  models.py
docs/: 使用手册.md  技术方案详细设计.md  海康威视摄像头集成指南.md  部署指南.md
frontend/: index.html
frontend/admin/: index.html
frontend/leader/: index.html
frontend/student/: index.html
scripts/: run_tests.sh  setup.sh
tests/: conftest.py  test_action_analyzer.py  test_api.py  test_hikvision.py  test_realtime_analyzer.py  test_video_processor.py
